switched to maven