@@ -4,6 +4,7 @@ import com.company.Card;
 
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Arrays;
 import java.util.List;
 
 public class Combination {
@@ -11,7 +12,7 @@ public class Combination {
     int value;
 
     private Combination(Collection<Card> cards, int value) {
-        this.cards = List.copyOf(cards);
+        this.cards = new ArrayList<>(cards);
         this.value = value;
     }
 
@@ -28,7 +29,7 @@ public class Combination {
 
     static {
         for (Card card : Card.allCards) {
-            allCombinations.add(new Combination(List.of(card, card), 1));
+            allCombinations.add(new Combination(Arrays.asList(card, card), 1));
         }
     }
 }
